--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "sass": "^1.63.3",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.0",
+        "bootstrap-icons": "^1.10.5",
+        "vue": "^3.2.36",
+        "vue-router": "^4.0.13"
     }
 }
